deploy/base/client_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: client2
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: client
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: client
          image: r.cfcr.io/akishitara/akishitara/test:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 5000
          command:
          - /client
