deploy/base/server_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: server
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: server
          image: akishitara1225/istio-protobuftest
          imagePullPolicy: Always
          ports:
          - containerPort: 5000
          command:
          - /server
