deploy/base/client_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: client
  type: LoadBalancer
