deploy/base/server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  ports:
  - name: grpc
    port: 5000
    targetPort: 5000
  selector:
    app: server
